--- a/accessibility.html
+++ b/accessibility.html
@@ -16,6 +16,47 @@
     <![endif]-->
   </head>
   <body>
+    <!-- Skip link for keyboard users -->
+    <a class="sr-only sr-only-focusable" href="#main" id="skip-to-content">Skip to main content</a>
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" aria-label="Main navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#main-nav"
+            aria-expanded="false"
+            aria-controls="main-nav"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">BrowserAudit</a>
+        </div>
+
+        <div id="main-nav" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/analytics">Analytics</a></li>
+            <!-- <li><a href="#" class="browseraudit-start">Run tests</a></li> -->
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <!-- <li><a href="#" data-toggle="modal" data-target="#about">About</a></li> -->
+            <li><a href="/accessibility">Accessibility</a></li>
+            <li><a href="https://github.com/browseraudit/browseraudit" target="_blank">Contribute</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Move the page's main wrapper down a bit so the fixed navbar doesn't overlap -->
+    <main id="main" tabindex="-1" role="main">
+    <!-- existing page content .container goes here -->
+
     <div class="container">
       <div class="page-header">
         <h1><a href="/">BrowserAudit</a> <small>accessibility statement</small></h1>
