--- a/analytics.html
+++ b/analytics.html
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <!-- Bootstrap navbar in iframe to avoid layout conflicts -->
+    <iframe
+      src="./static/navbar.html"
+      style="width: 100%; height: 50px; border: none; margin: 0; padding: 0;"
+      title="Navigation"
+    ></iframe>
+
+    <main id="main" tabindex="-1" role="main">
+    <!-- existing page content .container goes here -->
+
     <div class="page-title">
       <h1>BrowserAudit Data Analysis</h1>
     </div>
